--- a/index.html
+++ b/index.html
@@ -4,11 +4,31 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Ipei B. Goto</title>
     <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
-    <h1>Hello world.</h1>
+    <div id="hello-page">
+      <h3 style="font-weight: 300; text-align: left; font-size: 4rem">
+        Hi, I'm
+      </h3>
+      <br />
+      <br />
+      <br />
+      <h1 style="font-weight: 300; text-align: center; font-size: 10rem">
+        Ipei Goto
+      </h1>
+    </div>
+    <div id="bio">
+      <p style="font-weight: 300; text-align: left; font-size: 3rem"">I’m an IT student from the Philippines</p>
+    </div>
   </body>
 </html>
