--- a/index.html
+++ b/index.html
@@ -27,8 +27,31 @@
         Ipei Goto
       </h1>
     </div>
-    <div id="bio">
-      <p style="font-weight: 300; text-align: left; font-size: 3rem"">I’m an IT student from the Philippines</p>
+
+    <div id="short-intro">
+      <p style="font-weight: 300; text-align: left; font-size: 3rem"">I’m an IT student from the Philippines.</p>
     </div>
+
+    <div id="project-showcase">
+      <h2 style="font-weight: 500; font-size: 5rem; text-align: center; margin-top: 5rem;">---Projects---</h2>
+    </div>
+
+    <div id="bio">
+      <h2 style="font-weight:500; font-size: 3rem;">About me</h2>
+      <p  style="
+      font-weight:300; font-size: 2rem; line-height: 140%; width: 40rem; margin-top: 0.4rem; margin-left: 3rem;
+      ">
+        I’m a Half-Japanese, Half-Filipino <br> BSIT student based in Pasig City.<br> 20 years old, and can speak, English, Japanese, and Filipino.
+      </p>
+      <h4 style="font-weight: 500; font-size: 3rem; margin-top: 3rem;">Skillset:</h4>
+      <ul style="margin-left: 4.5rem;font-size: 1.5rem;font-weight: 300;line-height: 150.4%; /* 37.6px */">
+        <li>Python</li>
+        <li>HTML, CSS</li>
+        <li>JavaScript</li>
+      </ul>
+      <h2 style="font-weight:500; font-size: 3rem; margin-top:2rem;">Mail</h2>
+      <p style="font-weight: 300; font-size: 2rem; margin-left: 3.5rem; margin-top: 0.5rem;"><a href="">email@email.com</a></p>
+    </div>
+
   </body>
 </html>
