Placeholder for future projects

--- a/index.html
+++ b/index.html
@@ -33,7 +33,14 @@
     </div>
 
     <div id="project-showcase">
-      <h2 style="font-weight: 500; font-size: 5rem; text-align: center; margin-top: 5rem;">---Projects---</h2>
+      <h2 style="font-weight: 500; font-size: 5rem; text-align: center; margin-top: 7rem;">---Projects---</h2>
+
+      <div id="python-div">
+        <img src="https://images.pexels.com/photos/209831/pexels-photo-209831.jpeg" alt="" srcset="">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4c/Pathfinding_2D_Illustration.svg/1200px-Pathfinding_2D_Illustration.svg.png  " alt="" srcset="">
+        <div id="interactive-map"></div>
+      </div>
+
     </div>
 
     <div id="bio">
@@ -50,7 +57,7 @@
         <li>JavaScript</li>
       </ul>
       <h2 style="font-weight:500; font-size: 3rem; margin-top:2rem;">Mail</h2>
-      <p style="font-weight: 300; font-size: 2rem; margin-left: 3.5rem; margin-top: 0.5rem;"><a href="">email@email.com</a></p>
+      <p style="font-weight: 300; font-size: 2rem; margin-left: 3.5rem; margin-top: 0.5rem; padding-bottom: 3rem;">ipeigotou@gmail.com</p>
     </div>
 
   </body>
